fix: remove $table-operation-column-spacing

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -679,8 +679,6 @@ $empty-description-color: $gray-600 !default;
 $empty-description-size: $font-size-base !default;
 $empty-description-margin-top: 14px !default;
 
-//util
-$operation-link-margin-y: 32px !default;
 //switch
 // $switch-lg-width: 48px !default;
 // $switch-lg-height: 28px !default;
