--- a/src/table/styles/table.scss
+++ b/src/table/styles/table.scss
@@ -46,10 +46,10 @@
 
     > .thy-action + a,
     > a + .thy-action {
-        margin-left: variables.$operation-link-margin-y - 8px;
+        margin-left: variables.$table-operation-column-spacing - 8px;
     }
     > .thy-action + .thy-action {
-        margin-left: variables.$operation-link-margin-y - 16px;
+        margin-left: variables.$table-operation-column-spacing - 16px;
     }
 }
 
